# montecarlotreesearchcpp

./: .gitignore  CMakeLists.txt  MonteCarloTreeSearchCPP.cpp  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cdci.yml
inc/: action.h  backpropagationpolicy.h  expansionpolicy.h  gamestate.h  montecarlotreesearch.h  resourcecriteria.h  selectionpolicy.h  simulationpolicy.h  timecriteria.h  treesearch.h  treesearchnode.h
src/: CMakeLists.txt  action.h  backpropagationpolicy.h  bestchild.h  expansionpolicy.h  gamestate.h  montecarlotreesearch.cpp  montecarlotreesearch.h  resourcecriteria.h  selectionpolicy.h  simplebackpropagationpolicy.cpp  simplebackpropagationpolicy.h  simpleexpansionpolicy.cpp  simpleexpansionpolicy.h  simpleselectionpolicy.cpp  simpleselectionpolicy.h  simplesimulationpolicy.cpp  simplesimulationpolicy.h  simplestatisticsnode.cpp  simplestatisticsnode.h  simulationpolicy.h  statisticsnode.h  timecriteria.cpp  timecriteria.h  treesearch.h  treesearchnode.cpp  treesearchnode.h  upperconfidenceboundbestchild.cpp  upperconfidenceboundbestchild.h
test/: CMakeLists.txt
